# DSTExpertSystem

./: README.md  pyproject.toml
data/: convert_table.csv  match_table.csv
data/PreviousResearch/: KB-Corresponding.csv  KB-Likelihood.csv
data/tests/: test.csv
dstexpertsystem/: __init__.py  expert_system.py  read_csv.py
dstexpertsystem/analysis/: 主観確率の更新過程とその応用に関する研究.ipynb
dstexpertsystem/utils/: errors.py
