[tool.poetry]
name = "dst_expert_system"
version = "0.1.0"
description = "This is the repository for Expert System with Dempster&Shafer theorem"
authors = ["sarrrrry <sarrrrry.sarrrrry@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^1.2.6"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
